# construal-analysis

./: Makefile  README.md  pyproject.toml
construal/: cli.py  pipeline.py
construal/common/: config.py  io.py  models.py  preprocess.py  stats.py  tables.py  typing.py  utils.py
construal/steps/: step01_chance.py  step02_success_sv_vs.py  step03_determiner_dist.py  step04_alignment_quality.py  step05_tau_vs_determiner.py  step06_architecture_success.py  step07_strategy_success.py
tests/: test_preprocess.py  test_stats.py  test_step04_alignment.py  test_tables.py  test_test03_holm.py
tests/data_fixtures/: README.txt
